--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,11 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
+    "outDir": "dist",
     "sourceMap": true
   },
-  "files": [
-  ],
   "include": [
-    "src/**/*.ts"
+    "/**/*.ts"
   ],
   "exclude": [
     "node_modules"
