--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: node_js
 sudo: false
+
 node_js:
   - 11
   - 10
   - 9
+cache: yarn
+
 install:
   - yarn install
+
+script:
+  - yarn build
