Date formatting and report check conditions fix - momentJS added and tracker create date format changed - async call duplicate requests prevented - remaining day condition added - filter field types changed to constant

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "dotenv": "^6.2.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "typescript": "^3.3.3333",
